[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/World/dialog.png" type="Texture" id=1]
[ext_resource path="res://Scripts/World/npc.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/catjam.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/ui.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.22437, 4.14633 )

[node name="Area2D2" type="Area2D"]
position = Vector2( -0.864014, 57.6104 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.30515, 0 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0.420994, 35.4537, 7.83924, 7.83924 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -19.3229 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -21 )
zoom = Vector2( 0.1, 0.1 )

[node name="Control" parent="." instance=ExtResource( 4 )]
pause_mode = 2
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
